[project]
name = "dps25bddbench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "behave>=1.3.3",
    "dotenv>=0.9.9",
    "influxdb-client>=1.49.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pydantic>=2.12.4",
    "scipy>=1.16.3",
    "systemd-python>=235",
]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip_gitignore = true

[tool.ruff.lint]
select = ["ANN"]
ignore = []
